# yocto

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
nginx/: nginx.conf
tests/: test_address.py  test_auth.py  test_config.py  test_db.py  test_pages.py  test_short.py
yocto/: __init__.py  address.py  app.py  auth.py  config.py  db.py  pages.py  short.py
yocto/lib/: exceptions.py  utils.py
yocto/templates/: _navigation.html  base.html  index.html
yocto/templates/pages/: account.html  create.html  delete.html  error.html  index.html  login.html  login_success.html  my_links.html  signup.html
