[tool.poetry]
name = "yocto"
version = "0.1.0"
description = "Generate shortened web addresses quickly and easily."
authors = ["Edward Thomas <ed.j.thomas@protonmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
pytest = "^8.0.0"
pymongo = "^4.6.1"
pytest-mongo = "^3.0.0"
argon2-cffi = "^23.1.0"
regex = "^2023.12.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
